--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -12,7 +12,7 @@
   margin: auto;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
 
   a {
     width: 170px;
@@ -83,32 +83,37 @@ p{
 
 @media(max-width: 2560px) {
   .left{
-    padding-left: 200px;
+    // padding-left: 200px;
   }
   .right{
-    padding-left: 650px;
+    // padding-left: 650px;
   }
 }
 
 @media(max-width: 1440px) {
   .left{
-    padding-left: 10px;
+    // padding-left: 10px;
   }
   .right{
-    padding-left: 400px;
+    // padding-left: 400px;
   }
 }
 
 @media(max-width: 1024px) {
   .left{
-    padding-left: 1px;
+    // padding-left: 1px;
   }
   .right{
-    padding-left: 60px;
+    // padding-left: 60px;
   }
 }
 
 @media(max-width: 768px) {
+  .icon {
+    visibility: hidden;
+    display: none;
+  }
+
   .nav{
     margin-top: 20px;
     margin-left: 3px;
@@ -117,10 +122,13 @@ p{
     flex-direction: column;
     padding-left: 1px;
     margin-top: 5px;
+    justify-content: flex-start;
+    align-items: flex-start;
     a{
-      display: block;
+      display: flex;
       height: 22px;
       width: 300px;
+      justify-content: flex-start;
     }
     a:hover {
       height: 22px;
@@ -135,10 +143,14 @@ p{
     padding-left: 1px;
     margin-top: 5px;
     margin-bottom: 5px;
+    justify-content: flex-start;
+    align-items: flex-start;
     a{
-      display: block;
+      display: flex;
       height: 22px;
       width: 170px;
+      justify-content: flex-start;
+    justify-content: flex-start;
     }
     a:hover {
       background-color: transparent;
@@ -149,3 +161,6 @@ p{
   }
 }
 
+.navbar {
+  width: 100%;
+}
